@startuml

title __COMP346PA2S2020's Class Diagram__\n

  namespace  {
    class CPU {
    }
  }
  

  namespace  {
    class CPUProcess {
    }
  }
  

  namespace  {
    class CPUSchedulerTester {
    }
  }
  

  namespace  {
    class InvalidInputException {
    }
  }
  

  namespace  {
    interface Scheduler {
    }
  }
  

  namespace  {
    class SchedulerFCFS {
    }
  }
  

  namespace  {
    class SchedulerRR {
    }
  }
  

  namespace  {
    class SchedulerSJF {
    }
  }
  

  namespace  {
    class SchedulerSRTF {
    }
  }
  

  namespace  {
    abstract class SchedulerStrategy {
    }
  }
  

  CPU o-- CPUProcess : runningProcess
  SchedulerFCFS -up-|> SchedulerStrategy
  SchedulerRR -up-|> SchedulerStrategy
  SchedulerSJF -up-|> SchedulerStrategy
  SchedulerSRTF -up-|> SchedulerStrategy
  SchedulerStrategy .up.|> Scheduler
  SchedulerStrategy o-- CPUProcess : ioProcess


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
